Fixing bug with events and shifted canvas. Adding text color/font

--- a/examples/eventExample/App/styles.css
+++ b/examples/eventExample/App/styles.css
@@ -6,3 +6,8 @@
 	height: 100%;
 	overflow: hidden;
 }
+
+.topBar {
+	width: 100px;
+	height: 100px;
+}
